# Atlas

./: .gitignore  .ignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture-diagram.md  cli-command-flows.md
src/atlas/: __init__.py
src/atlas/chunking/: __init__.py  models.py  strategy.py
src/atlas/cli/: __main__.py  app.py
src/atlas/cli/commands/: __init__.py  books.py  build.py  clean.py  context.py  init.py  repo.py  reset.py  search.py  sync.py  web.py
src/atlas/context/: __init__.py  assembler.py  models.py  service.py  writer.py
src/atlas/core/: __init__.py  books.py  cleanup.py  config.py  errors.py  logging.py  models.py  workspace.py
src/atlas/git/: __init__.py  client.py  errors.py  manifest.py  models.py  service.py
src/atlas/scanner/: __init__.py  discovery.py  filtering.py  fingerprints.py  models.py
src/atlas/search/: __init__.py  formatter.py  models.py  ranking.py  service.py
src/atlas/storage/: __init__.py  embedding.py  errors.py  models.py  pipeline.py  repositories.py  sqlite_store.py  vector_store.py
src/atlas/templates/books/: Atlas-API-Contract.md  Atlas-Book-Template.md  Atlas-Bug-Fix.md  Atlas-Code-Review.md  Atlas-Dev-GenerateE2ETests.md  Atlas-Dev-GeneratePrompt.md  Atlas-Dev-GenerateTaskSpec.md  Atlas-Dev-GenerateUnitTests.md  Atlas-Dev-UpdatePRD.md  Atlas-Dev-UpdateWBS.md  Atlas-Dev-Workflow.md  (+14 more)
src/atlas/web/: __init__.py  errors.py  ingest.py  models.py  registry.py
tests/: test_books.py  test_cleanup.py  test_cleanup_confirm.py  test_context_pack.py  test_search_formatter.py  test_search_ranking.py
