[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-cli"
version = "0.1.0"
description = "Atlas: a Python CLI developer knowledge system"
readme = "AGENTS.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
]

[project.scripts]
atlas = "atlas.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlas*"]
